; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/debugger/extr_dbstats.c_AcpiDbCountNamespaceObjects.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/components/debugger/extr_dbstats.c_AcpiDbCountNamespaceObjects.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AcpiGbl_NumNodes = common dso_local global i64 0, align 8
@AcpiGbl_NumObjects = common dso_local global i64 0, align 8
@AcpiGbl_ObjTypeCountMisc = common dso_local global i64 0, align 8
@ACPI_TYPE_NS_NODE_MAX = common dso_local global i32 0, align 4
@AcpiGbl_ObjTypeCount = common dso_local global i64* null, align 8
@AcpiGbl_NodeTypeCount = common dso_local global i64* null, align 8
@ACPI_TYPE_ANY = common dso_local global i32 0, align 4
@ACPI_ROOT_OBJECT = common dso_local global i32 0, align 4
@ACPI_UINT32_MAX = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@AcpiDbClassifyOneObject = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @AcpiDbCountNamespaceObjects to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @AcpiDbCountNamespaceObjects() #0 {
  %1 = alloca i32, align 4
  store i64 0, i64* @AcpiGbl_NumNodes, align 8
  store i64 0, i64* @AcpiGbl_NumObjects, align 8
  store i64 0, i64* @AcpiGbl_ObjTypeCountMisc, align 8
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %16, %0
  %3 = load i32, i32* %1, align 4
  %4 = load i32, i32* @ACPI_TYPE_NS_NODE_MAX, align 4
  %5 = sub nsw i32 %4, 1
  %6 = icmp slt i32 %3, %5
  br i1 %6, label %7, label %19

7:                                                ; preds = %2
  %8 = load i64*, i64** @AcpiGbl_ObjTypeCount, align 8
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i64, i64* %8, i64 %10
  store i64 0, i64* %11, align 8
  %12 = load i64*, i64** @AcpiGbl_NodeTypeCount, align 8
  %13 = load i32, i32* %1, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i64, i64* %12, i64 %14
  store i64 0, i64* %15, align 8
  br label %16

16:                                               ; preds = %7
  %17 = load i32, i32* %1, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %1, align 4
  br label %2

19:                                               ; preds = %2
  %20 = load i32, i32* @ACPI_TYPE_ANY, align 4
  %21 = load i32, i32* @ACPI_ROOT_OBJECT, align 4
  %22 = load i32, i32* @ACPI_UINT32_MAX, align 4
  %23 = load i32, i32* @FALSE, align 4
  %24 = load i32, i32* @AcpiDbClassifyOneObject, align 4
  %25 = call i32 @AcpiNsWalkNamespace(i32 %20, i32 %21, i32 %22, i32 %23, i32 %24, i32* null, i32* null, i32* null)
  ret void
}

declare dso_local i32 @AcpiNsWalkNamespace(i32, i32, i32, i32, i32, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
